Run script several times for test on ubuntu:18.04.

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,3 +11,8 @@ jobs:
         uses: ./.github/actions/shellcheck
       - name: checkbashisms
         uses: ./.github/actions/checkbashisms
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: testrun
+        uses: actions/testrun
