--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,5 +14,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: checkout
+        uses: actions/checkout@master
       - name: testrun
         uses: ./.github/actions/testrun
