Do not install recommended packages.

--- a/.github/actions/checkbashisms/Dockerfile
+++ b/.github/actions/checkbashisms/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:9.5-slim
 
 RUN apt-get update
-RUN apt-get -y install devscripts
+RUN apt-get -y --no-install-recommends install devscripts
 
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
