--- a/.github/actions/shellcheck/Dockerfile
+++ b/.github/actions/shellcheck/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:9.5-slim
 
 RUN apt-get update
-RUN apt-get -y install shellcheck
+RUN apt-get -y --no-install-recommends install shellcheck
 
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
