--- a/.github/actions/testrun/Dockerfile
+++ b/.github/actions/testrun/Dockerfile
@@ -1,9 +1,10 @@
 FROM ubuntu:18.04
 
 RUN apt-get update
-RUN apt-get install -y software-properties-common
+RUN apt-get install -y --no-install-recommends software-properties-common
+
 RUN add-apt-repository --yes ppa:wireguard/wireguard
-RUN apt-get install -y wireguard-tools
+RUN apt-get install -y --no-install-recommends wireguard-tools
 
 ADD easy-wg-quick /easy-wg-quick
 RUN chmod +x /easy-wg-quick
