Install iproute2 and qrencode.

--- a/.github/actions/testrun/Dockerfile
+++ b/.github/actions/testrun/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu:18.04
 
 RUN apt-get update
+RUN apt-get install -y --no-install-recommends iproute2 qrencode
 RUN apt-get install -y --no-install-recommends software-properties-common
 
 RUN add-apt-repository --yes ppa:wireguard/wireguard
