--- a/.github/actions/testrun/Dockerfile
+++ b/.github/actions/testrun/Dockerfile
@@ -1,11 +1,22 @@
 FROM ubuntu:latest
 
-RUN apt-get update
-RUN apt-get install -y --no-install-recommends iproute2 qrencode
-RUN apt-get install -y --no-install-recommends software-properties-common
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US
 
-RUN add-apt-repository --yes ppa:wireguard/wireguard
-RUN apt-get install -y --no-install-recommends wireguard-tools
+ENV DEBIAN_FRONTEND noninteractive
+
+RUN apt-get update && \
+    apt-get install -y locales && \
+    locale-gen $LANG && \
+    apt-get full-upgrade -y && \
+    apt-get install -y --no-install-recommends \
+        iproute2 \
+        qrencode \
+        software-properties-common && \
+    add-apt-repository --yes ppa:wireguard/wireguard && \
+    apt-get install -y --no-install-recommends wireguard-tools && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
