--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,9 +3,9 @@ test_task:
   name: FreeBSD test run
   freebsd_instance:
     matrix:
-      image_family: freebsd-13-0-snap
-      image_family: freebsd-12-1-snap
-      image_family: freebsd-11-3-snap
+      image_family: freebsd-13-0
+      image_family: freebsd-12-2
+      image_family: freebsd-11-4
   env:
     CIRRUS_CLONE_DEPTH: 10
   pkginstall_script:
