--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,8 +47,8 @@ jobs:
       - name: empty file check
         run: ls *.txt *.key *.conf | xargs -tn1 test -s
       - name: wg-quick up
-        run: wg-quick up ./wghub.conf
+        run: sudo wg-quick up ./wghub.conf
       - name: check interface
-        run: wg show
+        run: sudo wg show
       - name: wg-quick down
-        run: wg-quick down ./wghub.conf
+        run: sudo wg-quick down ./wghub.conf
