--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@master
       - name: shellcheck
         uses: ./.github/actions/shellcheck
+      - name: shfmt
+        uses: ./.github/actions/shfmt
       - name: checkbashisms
         uses: ./.github/actions/checkbashisms
   test:
