Remove expired ports: net/wireguard, net/wireguard-kmod.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -9,8 +9,7 @@ test_task:
   env:
     CIRRUS_CLONE_DEPTH: 10
   pkginstall_script:
-    - pkg install -y net/wireguard graphics/libqrencode
-    - pkg install -y net/wireguard-kmod net/wireguard-go
+    - pkg install -y net/wireguard-tools graphics/libqrencode
     - pkg install -y shells/bash devel/bats-core
   kldload_if_wg_script:
     - kldload if_wg || true
