--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,14 @@ name: easy-wg-quick workflow
 
 on:
   push:
+    branches:
+      - master
   pull_request:
+    branches:
+      - master
   schedule:
-    - cron:  '0 0 * * *'
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
   sast:
