--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,7 +4,8 @@ test_task:
   freebsd_instance:
     matrix:
       image_family: freebsd-15-0-snap
-      image_family: freebsd-14-1
+      # disabled 14.x due to wg-quick: command not found error
+      #image_family: freebsd-14-1
       image_family: freebsd-13-3
   env:
     CIRRUS_CLONE_DEPTH: 10
