Use fetch instead of wget for wg-quick download.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -12,7 +12,7 @@ test_task:
     - pkg install -y net/wireguard-tools graphics/libqrencode
     - pkg install -y shells/bash devel/bats-core
   wg-quick_install_from_git_script:
-    - wget -O /usr/local/sbin/wg-quick https://raw.githubusercontent.com/WireGuard/wireguard-tools/master/src/wg-quick/freebsd.bash
+    - fetch -o /usr/local/sbin/wg-quick https://raw.githubusercontent.com/WireGuard/wireguard-tools/master/src/wg-quick/freebsd.bash
     - chmod 0755 /usr/local/sbin/wg-quick
   kldload_if_wg_script:
     - kldload if_wg || true
