--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -11,9 +11,6 @@ test_task:
   pkginstall_script:
     - pkg install -y net/wireguard-tools graphics/libqrencode
     - pkg install -y shells/bash devel/bats-core
-  wg-quick_install_from_git_script:
-    - fetch -o /usr/local/sbin/wg-quick https://raw.githubusercontent.com/WireGuard/wireguard-tools/master/src/wg-quick/freebsd.bash
-    - chmod 0755 /usr/local/sbin/wg-quick
   kldload_if_wg_script:
     - kldload if_wg || true
   unittests_script:
@@ -30,6 +27,8 @@ test_task:
     - cat wghub.conf
   check_for_empty_files_script:
     - ls *.txt *.key *.conf | xargs -tn1 test -s
+  wg-quick_install_script:
+    - ./easy-wg-quick --install-wg-quick
   setup_wireguard_interface_script:
     - /usr/local/sbin/wg-quick up ./wghub.conf
   check_interface_script:
