Enforce pre-commit checks in workflow.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,16 @@ on:
   workflow_dispatch:
 
 jobs:
+  precommit:
+    name: pre-commit
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+      - name: setup-python
+        uses: actions/setup-python@v5
+      - name: pre-commit
+        uses: pre-commit/action@v3.0.1
   sast:
     name: sast
     runs-on: ubuntu-latest
