--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/checkout@v4
       - name: setup-python
         uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
       - name: pre-commit
         uses: pre-commit/action@v3.0.1
   sast:
